[project]
name = "iconfont-mcp-server"
version = "1.0.0"
description = "MCP server for searching and downloading SVG icons from iconfont.cn"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.27,<2",
    "httpx>=0.27.0",
    "playwright>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["."]
python_files = ["test_*.py"]
